# ai-code-collaboration-crew

./: README.md  main.py  pyproject.toml
src/: crew.py
src/agents/: backend_engineer.py  github_agent.py
src/tasks/: coding_task.py  github_task.py  review_task.py  testing_task.py
src/tools/: github_tool.py
ui/: app.py
